# easy-hsr

./: .gitignore  CMakeLists.txt  README.md  package.xml
scripts/: ArmManager.py  BasicManager.py  BodyManager.py  DetectARMarkerManager.py  Find.py  HandManager.py  Move.py  MoveManager.py  OmniBaseManager.py  Place.py
