<?xml version="1.0"?>
<package>
  <name>hsrb_place_on</name>
  <version>0.0.0</version>
  <description>The hsrb_place_on package</description>

  <maintainer email="kiyomaru@mm.doshisha.ac.jp">Hirokazu KIYOMARU</maintainer>

  <license>MIT</license>

  <author email="kiyomaru@mm.doshisha.ac.jp">Hirokazu KIYOMARU</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

  <export>
  </export>
</package>
